package behavioural.iterator.CE1;

public abstract class Aggregate {
    public abstract MyIterator createIterator();
}
