package behavioural.iterator.CE1;

public interface MyIterator {
    Object first();
    Object next();
    boolean isDone();
    Object currentItem();
}
